frontend/src/styles/core.scss
:root {
  --roundness: 0.5rem;
  --font: "Roboto Mono", "Vazirmatn", monospace;
  // scroll-behavior: smooth;
  scroll-padding-top: 2rem;
  font-weight: 400;
  --crt-bg-color-shine: color-mix(
    in oklab,
    var(--main-color) 5%,
    var(--bg-color)
  );
  --crt-bg-color-stripe: color-mix(in oklab, black 50%, var(--bg-color));
  --crt-sub-color-glow: color-mix(in srgb, var(--sub-color) 20%, transparent);
  --crt-sub-alt-color-glow: color-mix(
    in srgb,
    var(--sub-alt-color) 20%,
    transparent
  );
  --crt-text-color-glow: color-mix(in srgb, var(--text-color) 20%, transparent);
  --crt-main-color-glow: color-mix(in srgb, var(--main-color) 20%, transparent);
  --crt-error-color-glow: color-mix(
    in srgb,
    var(--error-color) 20%,
    transparent
  );
  --crt-caret-color-glow: color-mix(
    in srgb,
    var(--caret-color) 20%,
    transparent
  );
}

::placeholder {
  color: var(--sub-color);
  opacity: 1;
  /* Firefox */
}

::selection {
  background-color: var(--main-color);
  color: var(--sub-alt-color);
}

#app {
  display: grid;
  grid-template-columns: auto minmax(0, 1000px) auto;
  justify-items: center;
  &.wide125 {
    grid-template-columns: auto minmax(0, 1250px) auto;
  }
  &.wide150 {
    grid-template-columns: auto minmax(0, 1500px) auto;
  }
  &.wide200 {
    grid-template-columns: auto minmax(0, 2000px) auto;
  }
  &.widemax {
    grid-template-columns: auto minmax(0, 1fr) auto;
  }
}

#nocss {
  display: none !important;
  pointer-events: none;
}

.ffscroll {
  scrollbar-width: thin;
  scrollbar-color: var(--sub-color) transparent;
}

html {
  @extend .ffscroll;
  overflow-y: scroll;
  scroll-behavior: smooth;
  line-height: 1.25;
}

a {
  display: inline-block;
  color: var(--sub-color);
  transition: color 0.125s, opacity 0.125s, background 0.125s;
  &:hover {
    color: var(--text-color);
  }
  &:focus-visible {
    outline: none;
    box-shadow: 0 0 0 0.1rem var(--bg-color), 0 0 0 0.2rem var(--text-color);
    border-radius: var(--roundness);
  }
}

a[router-link] * {
  pointer-events: none;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  font-family: var(--font);
  color: var(--text-color);
  overflow-x: hidden;
  background: var(--bg-color);
}

.customBackground {
  content: "";
  width: 100vw;
  height: 100vh;
  position: fixed;
  left: 0;
  top: 0;
  background-position: center center;
  background-repeat: no-repeat;
  z-index: -999;
  justify-content: center;
  align-items: center;
  display: flex;
}

#backgroundLoader {
  height: 3px;
  position: fixed;
  width: 100%;
  background: var(--main-color);
  animation: loader 2s cubic-bezier(0.38, 0.16, 0.57, 0.82) infinite;
  z-index: 9999;
}

#contentWrapper {
  max-width: 1000px;
  // min-width: 500px;
  // margin: 0 auto;
  display: grid;
  grid-auto-flow: row;
  min-height: 100vh;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
  gap: 2rem;
  align-items: center;
  z-index: 999;
  grid-template-rows: auto 1fr auto;
  width: 100%;
  transition: padding-top 0.125s;
  &.wide125 {
    max-width: 1250px;
  }
  &.wide150 {
    max-width: 1500px;
  }
  &.wide200 {
    max-width: 2000px;
  }
  &.widemax {
    max-width: unset;
  }
}

main {
  display: grid; //stupid fix for stupid safari
}

key {
  color: var(--bg-color);
  background-color: var(--sub-color);
  /* font-weight: bold; */
  padding: 0.1rem 0.3rem;
  margin: 0rem 0.5rem;
  border-radius: 0.1rem;
  display: inline-block;
  font-size: 0.7rem;
  line-height: 0.7rem;
}

.pageLoading {
  height: 100%;
  display: grid;
  align-items: center;
}

.pageLoading,
.pageAccount {
  .preloader {
    text-align: center;
    justify-self: center;
    display: grid;
    .barWrapper {
      display: grid;
      gap: 1rem;
      grid-row: 1;
      grid-column: 1;
      .bar {
        width: 20rem;
        height: 0.5rem;
        background: var(--sub-alt-color);
        border-radius: var(--roundness);
        .fill {
          height: 100%;
          width: 0%;
          background: var(--main-color);
          border-radius: var(--roundness);
          // transition: 1s;
        }
      }
    }
    .icon {
      grid-row: 1;
      grid-column: 1;
      font-size: 2rem;
      color: var(--main-color);
      margin-bottom: 1rem;
    }
  }
}

.devIndicator {
  position: fixed;
  font-size: 3rem;
  color: var(--sub-color);
  opacity: 0.25;
  z-index: -1;

  &.tl {
    top: 2rem;
    left: 2rem;
  }

  &.tr {
    top: 2rem;
    right: 2rem;
  }

  &.bl {
    bottom: 2rem;
    left: 2rem;
  }

  &.br {
    bottom: 2rem;
    right: 2rem;
  }
}

* {
  box-sizing: border-box;
}

.hidden {
  display: none !important;
}

.invisible {
  opacity: 0 !important;
  pointer-events: none !important;
}

.scrollToTopButton {
  bottom: 4rem;
  right: 2rem;
  position: fixed;
  font-size: 2rem;
  width: 4rem;
  height: 4rem;
  text-align: center;
  line-height: 4rem;
  background: var(--sub-alt-color);
  border-radius: 99rem;
  z-index: 99;
  cursor: pointer;
  color: var(--sub-color);
  transition: 0.25s;
  &:hover {
    background: var(--text-color);
    color: var(--bg-color);
  }
}

.inputAndIndicator {
  input {
    width: 100%;
  }
  position: relative;
  .statusIndicator {
    width: 2.25em;
    height: 2.25em;
    position: absolute;
    right: 0;
    top: 0;
    /* background: red; */
    display: grid;
    grid-template-columns: 2.25em;
    grid-template-rows: 2.25em;
    place-items: center center;
    cursor: pointer;

    .indicator {
      grid-column: 1/2;
      grid-row: 1/2;
      &.level-1 {
        color: var(--error-color);
      }
      &.level0 {
        color: var(--sub-color);
      }
      &.level1 {
        color: var(--main-color);
      }
    }
  }
}

.configureAPI.button {
  position: fixed;
  left: 0;
  top: 10rem;
  display: grid;
  grid-auto-flow: column;
  gap: 0.5rem;
  text-decoration: none;
  z-index: 999999999;
  border-radius: 0 1rem 1rem 0;
  padding: 1rem;
}

.avatar {
  transition: opacity 0.125s, filter 0.125s, webkit-filter 0.125s;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
}

.badge {
  background: var(--sub-color);
  color: var(--text-color);
  border-radius: calc(var(--roundness) / 2);
  // padding: 0.15em 0.5em;
  -webkit-user-select: none;
  user-select: none;
  display: grid;
  grid-template-columns: max-content auto;
  align-items: baseline;
  .fas,
  .far {
    margin-right: 0.3rem;
    margin-left: 0.3rem;
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
    font-size: 0.9em;
  }
  .text {
    margin-right: 0.3rem;
  }
}

.notificationBubble {
  position: absolute;
  background: var(--main-color);
  width: 1em;
  height: 1em;
  font-size: 0.5em;
  line-height: 2em;
  color: transparent;
  border-radius: 100rem;
  right: 0.5em;
  top: 0.5em;
  box-shadow: 0 0 0 0.5em var(--bg-color);
  transition: 0.125s;
}

#fpsCounter {
  position: fixed;
  left: 0;
  top: 0;
  background: var(--sub-alt-color);
  color: rgb(255, 217, 0);
  padding: 0.25rem;
  width: 10ch;
  text-align: center;
  z-index: 999999999;
  &.main {
    color: rgb(30, 255, 0);
  }
  &.error {
    color: red;
  }
}

